Possible Final Commit

--- a/Resume/contactinfo/contactinfo.css
+++ b/Resume/contactinfo/contactinfo.css
@@ -19,7 +19,8 @@ header{
 li{
     margin: 1em 
 }
-a:link, a:visited {color: #000;}
+a:link, a:visited {color: #000;} 
+img {margin: -.8em; float:inline-start;}
 
 
 main{
